bk_ida/gccida/c3/reload_reg_free_p
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_reg_free_p/src/reload1.c:4835:56: error: must use 'enum' tag to refer to type 'reload_type'
int  reload_reg_free_p( unsigned int regno, int opnum, reload_type type) 
                                                       ^
                                                       enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_reg_free_p/src/reload1.c:5026:15: error: use of undeclared identifier 'off_723588'
fancy_abort( &off_723588[4], 4527, "reload_reg_free_p"); 
              ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_reg_free_p/src/obj/reload1.o] Error 1
